fix some spacing on mobile, make the table scroll horizonatly rather than whole page

--- a/src/components/tables.scss
+++ b/src/components/tables.scss
@@ -13,8 +13,8 @@ a, .btn-link, .table-header {
 }
 
 .first-row {
-    border-top: 1px solid grey;
-    border-bottom: 1px solid grey;
+    border-top: 2px solid grey;
+    border-bottom: 2px solid grey;
 }
 
 .strong {
