--- a/src/styles/pages/central-programs.scss
+++ b/src/styles/pages/central-programs.scss
@@ -32,4 +32,8 @@
         font-size: 1.2rem;
     }
 
+    #programs-section {
+        padding-top: 100px;
+    }
+
 }
